--- a/custom css/style.css
+++ b/custom css/style.css
@@ -1,3 +1,6 @@
+.e-learning{
+    background-color:  #F4FAFD;
+}
 @media only screen and (max-width: 688px) {
     .course_sec{
         flex-direction: column;
